@@ -160,3 +160,24 @@ SoxrPcmResampler::Resample(ConstBuffer<void> src)
 
 	return { output_buffer, o_done * frame_size };
 }
+
+ConstBuffer<void>
+SoxrPcmResampler::Flush()
+{
+	const size_t frame_size = channels * sizeof(float);
+	const size_t o_frames = 1024;
+
+	float *output_buffer = (float *)buffer.Get(o_frames * frame_size);
+
+	size_t o_done;
+	soxr_error_t e = soxr_process(soxr, nullptr, 0, nullptr,
+				      output_buffer, o_frames, &o_done);
+	if (e != nullptr)
+		throw FormatRuntimeError("soxr error: %s", e);
+
+	if (o_done == 0)
+		/* flush complete */
+		output_buffer = nullptr;
+
+	return { output_buffer, o_done * frame_size };
+}
