@@ -42,6 +42,7 @@ public:
 	AudioFormat Open(AudioFormat &af, unsigned new_sample_rate) override;
 	void Close() noexcept override;
 	ConstBuffer<void> Resample(ConstBuffer<void> src) override;
+	ConstBuffer<void> Flush() override;
 };
 
 void
