@@ -10,6 +10,8 @@ ver 0.21 (not yet released)
 * decoder
   - gme: try loading m3u sidecar files
   - pcm: support audio/L24 (RFC 3190)
+* resampler
+  - soxr: flush resampler at end of song
 * output
   - alsa: non-blocking mode
   - alsa: change "dop" and "allowed_formats" settings at runtime
